--- a/Filing_Adapter/packages.config
+++ b/Filing_Adapter/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BH.Adapter" version="1.0.0" targetFramework="net461" />
-  <package id="BH.Engine.DataManipulation" version="1.0.0" targetFramework="net461" />
-  <package id="BH.Engine.Structure" version="1.0.0" targetFramework="net461" />
+  <package id="BH.Engine.DataManipulation" version="1.0.0.8" targetFramework="net461" />
+  <package id="BH.Engine.Structure" version="1.0.0.8" targetFramework="net461" />
   <package id="BH.oM" version="1.0.0" targetFramework="net461" />
   <package id="MongoDB.Bson" version="2.7.0" targetFramework="net461" />
-  <package id="Mono.Cecil" version="0.10.0" targetFramework="net461" />
+  <package id="Mono.Cecil" version="0.10.1" targetFramework="net461" />
+  <package id="System.IO.Abstractions" version="2.1.0.256" targetFramework="net461" />
 </packages>
