--- a/Filing_Engine/packages.config
+++ b/Filing_Engine/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BH.oM" version="1.0.0" targetFramework="net461" />
+  <package id="System.IO.Abstractions" version="2.1.0.256" targetFramework="net461" />
 </packages>
