--- a/Filing_Engine/packages.config
+++ b/Filing_Engine/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="BH.oM" version="1.0.0" targetFramework="net461" />
   <package id="System.IO.Abstractions" version="2.1.0.256" targetFramework="net461" />
+  <package id="System.IO.Abstractions.TestingHelpers" version="2.1.0.256" targetFramework="net461" />
 </packages>
