--- a/Filing_Engine/Filing_Engine.csproj
+++ b/Filing_Engine/Filing_Engine.csproj
@@ -61,6 +61,8 @@
     <Compile Include="Create\File.cs" />
     <Compile Include="Create\FileData.cs" />
     <Compile Include="Create\FileSystem.cs" />
+    <Compile Include="Modify\Move.cs" />
+    <Compile Include="Modify\Rename.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query\Path.cs" />
     <Compile Include="Query\Encoding.cs" />
