--- a/Filing_Engine/Filing_Engine.csproj
+++ b/Filing_Engine/Filing_Engine.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Create\FileSystem.cs" />
     <Compile Include="Modify\Move.cs" />
     <Compile Include="Modify\Rename.cs" />
+    <Compile Include="Objects\EqualityComparers\PathComparer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query\Path.cs" />
     <Compile Include="Query\Encoding.cs" />
