--- a/Filing_Test/Filing_Test.csproj
+++ b/Filing_Test/Filing_Test.csproj
@@ -38,6 +38,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Adapter_oM, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
     <Reference Include="BHoM">
       <HintPath>..\..\BHoM\Build\BHoM.dll</HintPath>
     </Reference>
