--- a/Filing_Engine/Filing_Engine.csproj
+++ b/Filing_Engine/Filing_Engine.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Modify\Rename.cs" />
     <Compile Include="Objects\EqualityComparers\PathComparer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Query\IsAcyclic.cs" />
     <Compile Include="Query\Path.cs" />
     <Compile Include="Query\Encoding.cs" />
     <Compile Include="Query\Contents.cs" />
