--- a/Filing_Engine/Filing_Engine.csproj
+++ b/Filing_Engine/Filing_Engine.csproj
@@ -71,12 +71,12 @@
     <Compile Include="Create\FileDirRequest.cs" />
     <Compile Include="Create\FileData.cs" />
     <Compile Include="Create\FileSystem.cs" />
-    <Compile Include="Modify\Move.cs" />
+    <Compile Include="Modify\ChangeDirectory.cs" />
     <Compile Include="Modify\Rename.cs" />
     <Compile Include="Objects\EqualityComparers\PathComparer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query\IsAcyclic.cs" />
-    <Compile Include="Query\Path.cs" />
+    <Compile Include="Query\FullPath.cs" />
     <Compile Include="Query\Encoding.cs" />
     <Compile Include="Query\Contents.cs" />
   </ItemGroup>
