--- a/Filing_oM/Filing_oM.csproj
+++ b/Filing_oM/Filing_oM.csproj
@@ -60,17 +60,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Directory.cs" />
+    <Compile Include="DirectoryInfo.cs" />
     <Compile Include="enums\Encodings.cs" />
-    <Compile Include="Requests\DirectoryRequest.cs" />
+    <Compile Include="Requests\DirectoryInfoRequest.cs" />
     <Compile Include="Requests\FileContentRequest.cs" />
-    <Compile Include="Requests\FileAndDirRequest.cs" />
+    <Compile Include="Requests\FileDirInfoRequest.cs" />
     <Compile Include="Requests\IFileDirRequest.cs" />
-    <Compile Include="Requests\FileRequest.cs" />
+    <Compile Include="Requests\FileInfoRequest.cs" />
     <Compile Include="FilingConfig.cs" />
     <Compile Include="FileFormat.cs" />
     <Compile Include="IFile.cs" />
-    <Compile Include="File.cs" />
+    <Compile Include="FileInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
