--- a/Filing_Engine/Filing_Engine.csproj
+++ b/Filing_Engine/Filing_Engine.csproj
@@ -68,11 +68,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Convert\ToFiling.cs" />
+    <Compile Include="Create\Directory.cs" />
+    <Compile Include="Create\File.cs" />
     <Compile Include="Create\FileDirRequest.cs" />
+    <Compile Include="Modify\RemoveContent.cs" />
+    <Compile Include="Modify\AddContent.cs" />
     <Compile Include="Modify\ChangeDirectory.cs" />
     <Compile Include="Modify\Rename.cs" />
     <Compile Include="Objects\EqualityComparers\PathComparer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Query\PointsTo.cs" />
     <Compile Include="Query\IsAcyclic.cs" />
     <Compile Include="Query\FullPath.cs" />
     <Compile Include="Query\Encoding.cs" />
