--- a/Filing_Adapter/Filing_Adapter.csproj
+++ b/Filing_Adapter/Filing_Adapter.csproj
@@ -85,7 +85,7 @@
     <Compile Include="AdapterActions\Pull.cs" />
     <Compile Include="CRUD\Create\Create.cs" />
     <Compile Include="CRUD\Delete.cs" />
-    <Compile Include="CRUD\Read\ReadFileSystemInfo.cs" />
+    <Compile Include="CRUD\Read\Read.cs" />
     <Compile Include="CRUD\Read\ReadFileContent.cs" />
     <Compile Include="FilingAdapter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
