Added Directory and File requests as separate requests.

--- a/Filing_oM/Filing_oM.csproj
+++ b/Filing_oM/Filing_oM.csproj
@@ -63,11 +63,15 @@
     <Compile Include="Directory.cs" />
     <Compile Include="BaseInfo.cs" />
     <Compile Include="enums\Encodings.cs" />
-    <Compile Include="IInfo.cs" />
-    <Compile Include="IFile.cs" />
+    <Compile Include="Interfaces\IInfo.cs" />
+    <Compile Include="Interfaces\IContent.cs" />
+    <Compile Include="Requests\Interfaces\IFileRequest.cs" />
+    <Compile Include="Requests\Interfaces\IFilingRequest.cs" />
+    <Compile Include="Requests\Interfaces\IDirectoryRequest.cs" />
     <Compile Include="Requests\FileContentRequest.cs" />
+    <Compile Include="Requests\DirectoryRequest.cs" />
+    <Compile Include="Requests\FileRequest.cs" />
     <Compile Include="Requests\FileDirRequest.cs" />
-    <Compile Include="Config\FilingConfig.cs" />
     <Compile Include="enums\FileFormat.cs" />
     <Compile Include="File.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
