--- a/Filing_Engine/Filing_Engine.csproj
+++ b/Filing_Engine/Filing_Engine.csproj
@@ -67,6 +67,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Convert\ToFileRequest.cs" />
     <Compile Include="Convert\ToFiling.cs" />
     <Compile Include="Create\Directory.cs" />
     <Compile Include="Create\File.cs" />
@@ -78,7 +79,7 @@
     <Compile Include="Modify\Rename.cs" />
     <Compile Include="Objects\EqualityComparers\PathComparer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Query\PointsTo.cs" />
+    <Compile Include="Query\IsExistingFile.cs" />
     <Compile Include="Query\IsAcyclic.cs" />
     <Compile Include="Query\FullPath.cs" />
     <Compile Include="Query\Encoding.cs" />
