Renamed Convert methods for compliance

--- a/Filing_Engine/Filing_Engine.csproj
+++ b/Filing_Engine/Filing_Engine.csproj
@@ -70,7 +70,7 @@
   <ItemGroup>
     <Compile Include="Compute\DirectorySize.cs" />
     <Compile Include="Convert\ToFileRequest.cs" />
-    <Compile Include="Convert\ToSystem.cs" />
+    <Compile Include="Convert\FromFiling.cs" />
     <Compile Include="Convert\ToFiling.cs" />
     <Compile Include="Create\Directory.cs" />
     <Compile Include="Create\File.cs" />
