Little refactor. Mods for Sharepoint

--- a/Filing_Adapter/Filing_Adapter.csproj
+++ b/Filing_Adapter/Filing_Adapter.csproj
@@ -98,6 +98,8 @@
     <Compile Include="CRUD\Read\ReadFileContent.cs" />
     <Compile Include="CRUD\Read\ReadFile.cs" />
     <Compile Include="Methods\AddExtraData.cs" />
+    <Compile Include="Methods\CreateFSFile.cs" />
+    <Compile Include="Methods\CreateFSDirectory.cs" />
     <Compile Include="Methods\WalkDirectories.cs" />
     <Compile Include="FilingAdapter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
