--- a/Filing_Engine/Filing_Engine.csproj
+++ b/Filing_Engine/Filing_Engine.csproj
@@ -75,9 +75,8 @@
     <Compile Include="Convert\ToFileRequest.cs" />
     <Compile Include="Convert\ToFiling\FSDirectory.cs" />
     <Compile Include="Convert\ToFiling\FSFile.cs" />
-    <Compile Include="Convert\ToFiling\LocatableResource.cs" />
-    <Compile Include="Create\Directory.cs" />
-    <Compile Include="Create\File.cs" />
+    <Compile Include="Convert\ToFiling\IContainer.cs" />
+    <Compile Include="Convert\ToFiling\ILocatableResource.cs" />
     <Compile Include="Create\FileDirRequest.cs" />
     <Compile Include="Modify\RelativiseUserPath.cs" />
     <Compile Include="Modify\RemoveContent.cs" />
