--- a/Filing_Engine/File_Engine.csproj
+++ b/Filing_Engine/File_Engine.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{D0B2A7E0-1D68-42A6-B699-8BB648D50932}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BH.Engine.Adapters.Filing</RootNamespace>
-    <AssemblyName>Filing_Engine</AssemblyName>
+    <RootNamespace>BH.Engine.Adapters.File</RootNamespace>
+    <AssemblyName>File_Engine</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -101,9 +101,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Filing_oM\Filing_oM.csproj">
+    <ProjectReference Include="..\Filing_oM\File_oM.csproj">
       <Project>{d344dcf0-788d-4e0a-8596-70199a080619}</Project>
-      <Name>Filing_oM</Name>
+      <Name>File_oM</Name>
       <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
