--- a/Filing_oM/File_oM.csproj
+++ b/Filing_oM/File_oM.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{D344DCF0-788D-4E0A-8596-70199A080619}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BH.oM.Adapters.Filing</RootNamespace>
-    <AssemblyName>Filing_oM</AssemblyName>
+    <RootNamespace>BH.oM.Adapters.File</RootNamespace>
+    <AssemblyName>File_oM</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
