--- a/File_Adapter/packages.config
+++ b/File_Adapter/packages.config
@@ -3,6 +3,7 @@
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net461" />
   <package id="MongoDB.Bson" version="2.7.2" targetFramework="net461" />
   <package id="Mono.Cecil" version="0.10.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
   <package id="System.IO.Abstractions" version="2.1.0.256" targetFramework="net461" />
   <package id="System.Memory" version="4.5.4" targetFramework="net461" />
